# UR_GRIPPER_ROS2

./: .gitmodules  README.md  log.txt  test.urdf
install/: local_setup.sh  setup.sh
install/moveit_config/share/moveit_config/: .setup_assistant  local_setup.sh  package.sh  package.xml
install/moveit_config/share/moveit_config/config/: joint_limits.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
install/moveit_config/share/moveit_config/rviz/: moveit.rviz
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/robotiq_description/share/robotiq_description/launch/: spawn_robotiq_85_gripper.launch.py
install/robotiq_description/share/robotiq_description/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  ur.urdf
install/ur_description/share/ur_description/: package.sh
install/ur_description/share/ur_description/launch/: view_ur.launch.py
install/ur_gazebo/share/ur_gazebo/: local_setup.sh  package.sh
install/ur_interfaces/share/ur_interfaces/: local_setup.sh  package.sh
install/ur_system_tests/lib/ur_system_tests/: arm_gripper_loop_controller
install/ur_system_tests/share/ur_system_tests/: local_setup.sh  package.sh
log/: latest_build
src/moveit_config/: CMakeLists.txt  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/robotiq_description/: CMakeLists.txt
src/ur_description/urdf/: ur.urdf  ur.urdf.xacro  ur_macro.xacro
src/ur_gazebo/launch/: ur.gazebo.launch.py
(+3 files in other folders)
